<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="gcm_defaultSenderId" translatable="false">891852120925</string>
    <string name="default_web_client_id" translatable="false">780057141561-etdtrh2c8au993nmrigoj0jfjoplu3t8.apps.googleusercontent.com</string>
    <string name="firebase_database_url" translatable="false">https://igap-im.firebaseio.com</string>
    <string name="ga_trackingId" translatable="false">UA-89789834-5</string>
    <string name="google_api_key" translatable="false">AIzaSyDJlUADMuvqi9xv4KiGkPqY69ULf8FMmxA</string>
    <string name="google_app_id" translatable="false">1:780057141561:android:69c59b7595e50096</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyDJlUADMuvqi9xv4KiGkPqY69ULf8FMmxA</string>
    <string name="google_storage_bucket" translatable="false">igap-im.appspot.com</string>
    <string name="project_id" translatable="false">igap-im</string>
    <string name="text_line_1_introduce_page2">Security &amp; Privacy</string>
    <string name="text_line_2_introduce_page2">iGap attaches the utmost importance to your security and privacy using the individual encryption algorithms and guarantees a safe and secure connection between you, your friends and family.</string>
    <string name="text_line_1_introduce_page3">Chat</string>
    <string name="text_line_2_introduce_page3">You can have one-on-one or group chats and even create your own channel and add members in order to share information with millions of people.</string>
    <string name="text_line_1_introduce_page4">iLand</string>
    <string name="text_line_2_introduce_page4">iLand! without limitation\nwith wonderful events as taking a taxi, pay bills and booking hotels and flights . Oh Also you can play games, watch films and listen to music</string>
    <string name="btn_start_page6">Start Now</string>
    <string name="text_line_1_introduce_page7">Nearby Feature</string>
    <string name="text_line_2_introduce_page7">Leave a new world around me. Around you, find your friends, entertainment centers, art, business and other and enjoy your moments ...</string>
    <string name="pu_title_profileUser">Complete Your User Profile</string>
    <string name="pu_desc_profileUser">Enter your Nickname and select a photo as your Profile Avatar/Picture</string>
    <string name="pu_nikname_profileUser">First Name</string>
    <string name="pu_Lets_Go">Continue</string>
    <string name="rg_confirm_text_register">Please confirm your country name and code then enter your phone number without its first zero/0</string>
    <string name="rg_Start">Let\'s Go</string>
    <string name="rg_Select_Country">Select your Country</string>
    <string name="Re_dialog_verify_number_part1">You have entered this number :</string>
    <string name="Re_dialog_verify_number_part2">Tap OK if this entered phone number is correct or simply modify it if wrong.</string>
    <string name="verify_socket_message">Please enter verification code sent by iGap to</string>
    <string name="verify_sms_message">Please enter verification code sent by sms </string>
    <string name="verify_call_message">Please enter verification code sent by call</string>
    <string name="verify_sms_socket_message">Please enter verification code sent by sms and iGap</string>
    <string name="verify_invalid_code_message">Unfortunately; the verification code is invalid , Please enter the correct one manually.</string>
    <string name="phone_number">Phone Number</string>
    <string name="ra_enter_reagent_code">enter referral code(Optional)</string>
    <string name="ra_confirm">Confirm</string>
    <string name="reagent_error_message">The number entered is incorrect for the referral.</string>
    <string name="Toast_Location_Not_Found">Location not found.</string>
    <string name="Toast_First_0">Don\'t need 0 at the beginning</string>
    <string name="Toast_Minimum_Characters">The number of characters is less than the limit</string>
    <string name="Toast_Enter_Code">Please enter the verification code</string>
    <string name="Toast_Number_Block">This number is blocked</string>
    <string name="Toast_time_wait">please wait until:</string>
    <string name="Toast_Write_NickName">Please enter your nickname</string>
    <string name="sure_delete_account">Are you sure you want to delete your account?</string>
    <string name="Destruction_Code">Destruction Code</string>
    <string name="destroy_description">Now you are deleting your account; your phone number is : </string>
    <string name="iGap_autofill_Destruction_Code">iGap automatically fills the field of Deletion Code; otherwise, fill it manually .</string>
    <string name="video_message">Video Message</string>
    <string name="file_message">File Message</string>
    <string name="audio_message">Audio Message</string>
    <string name="image_message">Image Message</string>
    <string name="contact_message">Contact Message</string>
    <string name="gif_message">Gif Message</string>
    <string name="voice_message">Voice Message</string>
    <string name="typing">typing…</string>
    <string name="sending_image">Sending image…</string>
    <string name="capturing_image">Capturing image…</string>
    <string name="sending_video">Sending video…</string>
    <string name="capturing_video">Capturing video…</string>
    <string name="sending_audio">Sending audio…</string>
    <string name="recording_voice">Recording voice…</string>
    <string name="sending_voice">Sending voice…</string>
    <string name="sending_document">Sending document…</string>
    <string name="sending_gif">Sending gif…</string>
    <string name="sending_file">Sending file…</string>
    <string name="sending_location">Sending location…</string>
    <string name="choosing_contact">Choosing contact…</string>
    <string name="painting">Painting…</string>
    <string name="log_out">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="pin_to_top">Pin To Top</string>
    <string name="Unpin_to_top">UnPin From Top</string>
    <string name="clear_history">Clear History</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="delete">Delete</string>
    <string name="left_group">Leave Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="search">Search</string>
    <string name="add_to_contact">Add to Contact</string>
    <string name="app_name">iGap</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="channel">Channel</string>
    <string name="igap">iGap</string>
    <string name="clear_history_content">Are you sure you want to clear history?</string>
    <string name="delete_chat_content">Are you sure you want to delete this chat?</string>
    <string name="delete_text">Are you sure you want to delete this contact?</string>
    <string name="cancel">Cancel</string>
    <string name="B_cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="B_ok">Ok</string>
    <string name="set">Confirm</string>
    <string name="am_camera">Camera</string>
    <string name="am_music">Music</string>
    <string name="am_picture">Picture</string>
    <string name="am_location">Location</string>
    <string name="am_video">Video</string>
    <string name="am_file">File</string>
    <string name="am_contact">Contact</string>
    <string name="just_wait_en">Please Wait</string>
    <string name="device_dosenot_camera_en">This device does not have a camera.</string>
    <string name="device_dosenot_support">This device does not have an app for this action.</string>
    <string name="do_you_want_to_turn_on_gps">Your GPS is off, do you want to turn it on?</string>
    <string name="select_picture_en">Select Picture</string>
    <string name="slide_to_cancel_en">&lt; &#160;Slide to Cancel</string>
    <string name="video_duration" formatted="false">%s (%s)</string>
    <string name="st_username">Username</string>
    <string name="st_title_Clear_Cache">Clear Cache</string>
    <string name="PrivacySettings">Privacy and Security</string>
    <string name="st_title_message">Message Room</string>
    <string name="st_title_message_textSize">Text Message Size</string>
    <string name="st_chatBackground">Chat Background</string>
    <string name="st_inApp_Browser">In-App browser</string>
    <string name="st_crop">Crop and Resize Photo</string>
    <string name="st_send_by_enter">Send by Enter Key</string>
    <string name="st_title_Media">Multimedia</string>
    <string name="st_auto_download_data">Auto-download (Using Mobile Data)</string>
    <string name="title_auto_download_data">Auto-download\n(Using Mobile Data)</string>
    <string name="st_auto_download_wifi">Auto-download (When Connected on Wi-Fi)</string>
    <string name="title_auto_download_wifi">Auto-download\n(Using Wi-Fi)</string>
    <string name="st_auto_download_roaming">Auto-download (When Roaming)</string>
    <string name="title_auto_download_roaming">Auto-download\n(Using Data Roaming)</string>
    <string name="st_auto_gif">Auto Play GIFs</string>
    <string name="st_keepMedia">Store Multimedia Files</string>
    <string name="st_title_messageNotification">Message Notifications</string>
    <string name="st_alert">Alert</string>
    <string name="st_messagePreview">Message Preview</string>
    <string name="st_led_color">LED Color</string>
    <string name="st_vibrate">Vibration</string>
    <string name="st_popupNotification">Pop-up Notifications</string>
    <string name="st_sound">Sound</string>
    <string name="st_title_groupNotification">Group Notifications</string>
    <string name="st_title_in_app_notification">In-App Notifications</string>
    <string name="st_in_app_sound">In-App Sounds</string>
    <string name="block">Block</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="password_Question_title_one">Question one (Required)</string>
    <string name="password_Question_title_two">Question two (Required)</string>
    <string name="password_Question_two">eg: Who is your best friend?</string>
    <string name="password_answer">Answer</string>
    <string name="enter_code">Enter your code</string>
    <string name="recovery_by_email">Recovery via E-mail</string>
    <string name="recovery_by_question">Recovery via Question</string>
    <string name="your_resend_email_skip">Resend Confirmation Code</string>
    <string name="buy_charge">Top up SIM card</string>
    <string name="pay_bills">Pay bills</string>
    <string name="pay_bills_crime">Pay traffic tickets</string>
    <string name="amount_2">amount:</string>
    <string name="bills_inquiry_mci">MCI subscribers bill inquiry </string>
    <string name="bills_inquiry_telecom">Home phones bill inquiry</string>
    <string name="responsible_for_all_financial_services">Responsible for all financial services</string>
    <string name="parsian_e_commerce_company_top">Parsian e-commerce company (top)</string>
    <string name="is_empty"></string>
    <string name="customer_response_center_021_2318">Customer Support Center: 021-2318</string>
    <string name="card_to_card">Request card to card</string>
    <string name="cheque_number">Cheque number :</string>
    <string name="page_count">pages</string>
    <string name="reject_count">Reject :</string>
    <string name="pass_count">Passed :</string>
    <string name="usable_count">Unused :</string>
    <string name="loan_number">Loan number: </string>
    <string name="branch_name">Branch Name:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="loan_count">Loan count:</string>
    <string name="remained_loan">Remained count:</string>
    <string name="state">State:</string>
</resources>