<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/camera"
      android:icon="@mipmap/am_camera"
      android:title="@string/am_camera" />
  <item
      android:id="@+id/picture"
      android:icon="@mipmap/am_picture"
      android:title="@string/am_picture" />
  <item
      android:id="@+id/video"
      android:icon="@mipmap/am_video"
      android:title="@string/am_video" />
  <item
      android:id="@+id/music"
      android:icon="@mipmap/am_music"
      android:title="@string/am_music" />
  <item
      android:id="@+id/document"
      android:icon="@mipmap/am_document"
      android:title="@string/am_document" />
  <item
      android:id="@+id/close"
      android:icon="@mipmap/ic_close"
      android:title="@string/navigation_drawer_close" />
  <item
      android:id="@+id/file"
      android:icon="@mipmap/am_file"
      android:title="@string/am_file" />
  <item
      android:id="@+id/paint"
      android:icon="@mipmap/am_paint"
      android:title="@string/am_paint" />
  <item
      android:id="@+id/location"
      android:icon="@mipmap/am_location"
      android:title="@string/am_location" />

  <group android:id="@+id/helpgroup">
    <item
        android:id="@+id/contact"
        android:icon="@mipmap/am_contact"
        android:title="@string/am_contact" />
  </group>
</menu>