<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.graphics.Color" />

    <import type="net.iGap.G" />

    <variable
      name="fragmentPaymentViewModel"
      type="net.iGap.viewmodel.FragmentPaymentViewModel" />

    <variable
      name="backHandler"
      type="net.iGap.interfaces.IBackHandler" />
  </data>

  <LinearLayout
    style="?backgroundColorSettingTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/fp_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <ScrollView
      android:layout_width="match_parent"
      android:scrollbars="none"
      android:layout_height="match_parent">

      <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp14"
        android:layout_height="match_parent">

          <android.support.design.button.MaterialButton
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/dp6"
              android:onClick="@{fragmentPaymentViewModel::onClickCardToCard}"
              android:text="@string/card_to_card"
              style="@style/IGapButtonStyle"/>

          <android.support.design.button.MaterialButton
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/IGapButtonStyle"
              android:text="@string/buy_charge"
              android:layout_margin="@dimen/dp6"
              android:onClick="@{fragmentPaymentViewModel::onClickCharge}"
              />

          <android.support.design.button.MaterialButton
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/IGapButtonStyle"
              android:text="@string/pay_bills"
              android:layout_margin="@dimen/dp6"
              android:onClick="@{fragmentPaymentViewModel::onClickBill}"
              />

          <android.support.design.button.MaterialButton
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/IGapButtonStyle"
              android:text="@string/pay_bills_crime"
              android:layout_margin="@dimen/dp6"
              android:onClick="@{fragmentPaymentViewModel::onClickBillTraffic}"
              />

          <android.support.design.button.MaterialButton
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/IGapButtonStyle"
              android:text="@string/bills_inquiry_mci"
              android:layout_margin="@dimen/dp6"
              android:onClick="@{fragmentPaymentViewModel::onClickInquiryMci}"
              />

          <android.support.design.button.MaterialButton
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/IGapButtonStyle"
              android:text="@string/bills_inquiry_telecom"
              android:layout_margin="@dimen/dp6"
              android:onClick="@{fragmentPaymentViewModel::onClickInquiryTelecom}"
              />

        <LinearLayout
          android:layout_width="match_parent"
          android:padding="@dimen/dp12"
          android:layout_marginBottom="@dimen/dp20"
          android:gravity="center"
          android:orientation="vertical"
          android:layout_height="wrap_content">

          <ImageView
            android:layout_width="@dimen/dp70"
            android:layout_height="@dimen/dp70"
            android:layout_margin="@dimen/dp8"
            app:srcCompat="@mipmap/parsian" />

          <TextView
            style="?textTitleColorSettingTheme"
            fontPath="fonts/IRANSansMobile.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/dp14"
            android:text="@string/responsible_for_all_financial_services" />

          <TextView
            style="?textTitleColorSettingTheme"
            fontPath="fonts/IRANSansMobile.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/dp14"
            android:text="@string/parsian_e_commerce_company_top" />

          <TextView
              style="?textTitleColorSettingTheme"
              fontPath="fonts/IRANSansMobile.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/dp14"
            android:text="@string/is_empty" />

          <TextView
              style="?textTitleColorSettingTheme"
              fontPath="fonts/IRANSansMobile.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/dp14"
            android:text="@string/customer_response_center_021_2318" />

        </LinearLayout>

      </LinearLayout>
    </ScrollView>
  </LinearLayout>
</layout>