<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp8"
    app:cardBackgroundColor="?iGapCardViewColor"
    app:cardCornerRadius="@dimen/dp6"
    app:cardElevation="@dimen/dp4"
    android:minHeight="@dimen/dp80">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp10"
        android:background="?selectableItemBackground">

        <TextView
            android:id="@+id/chequeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/cheque_number"
            android:textSize="@dimen/largeTextSize"
            android:textColor="?iGapTitleTextColor" />

        <TextView
            android:id="@+id/chequeCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/page_count"
            android:textSize="@dimen/standardTextSize"
            android:textColor="?iGapTitleTextColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp10"
            android:weightSum="3">

            <TextView
                android:id="@+id/tvCash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="1"
                android:textSize="@dimen/standardTextSize"
                android:textColor="?iGapTitleTextColor"
                android:text="@string/cash_count" />

            <TextView
                android:id="@+id/tvPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp6"
                android:layout_marginRight="@dimen/dp6"
                android:textSize="@dimen/standardTextSize"
                android:textColor="?iGapTitleTextColor"
                android:text="@string/pass_count" />

            <TextView
                android:id="@+id/tvReject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="1"
                android:textSize="@dimen/standardTextSize"
                android:textColor="?iGapTitleTextColor"
                android:text="@string/reject_count" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvUsable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="1"
                android:textSize="@dimen/standardTextSize"
                android:textColor="?iGapTitleTextColor"
                android:text="@string/usable_count" />

            <TextView
                android:id="@+id/tvBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp6"
                android:layout_marginRight="@dimen/dp6"
                android:textSize="@dimen/standardTextSize"
                android:textColor="?iGapTitleTextColor"
                android:text="@string/block" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>